add activity custom coffee to android manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".CustomCoffee"
+            android:label="Get custom coffee"
+            android:theme="@style/AppTheme"/>
+
     </application>
 
 </manifest>
