--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         </activity>
 
         <activity android:name=".CustomCoffeeActivity">
+        </activity>
 
+        <activity android:name=".MapCoffeeActivity">
         </activity>
 
     </application>
