--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,16 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".CustomCoffeeActivity">
-        </activity>
-
-        <activity android:name=".MapCoffeeActivity">
-        </activity>
-
-        <activity android:name=".SavedCoffeeActivity">
-            </activity>
-
+        <activity android:name=".MapCoffeeActivity" />
+        <activity android:name=".SavedCoffeeActivity" />
+        <activity
+            android:name=".CustomCoffeeActivity"
+            android:label="@string/title_activity_custom_coffee"></activity>
     </application>
 
 </manifest>
