--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.google.android.gms:play-services-maps:10.0.0'
     compile 'com.google.android.gms:play-services:10.0.0'
+    compile 'com.google.android.gms:play-services-location:10.0.0'
+
     testCompile 'junit:junit:4.12'
 }
