--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.0.0'
     compile 'com.google.android.gms:play-services:10.0.0'
     compile 'com.google.android.gms:play-services-location:10.0.0'
+    compile 'com.android.support:design:23.1.1'
 
     testCompile 'junit:junit:4.12'
 }
